src/objects/SW_Kit__c.object
<CustomObject>
    <fields>
        <fullName>BLUR_Version_String__c</fullName>
        <inlineHelpText>Brought in from related Device record</inlineHelpText>
        <label>BLUR Version String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Build_Fingerprint__c</fullName>
        <inlineHelpText>Brought in from related Device record</inlineHelpText>
        <label>Build Fingerprint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <formula>IF( ISNULL( Manually_Entered_Effective_Date__c ) , System_Calculated_Effective_Date__c , Manually_Entered_Effective_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Kit_ExternalID__c</fullName>
        <description>Visible only to Admin profile</description>
        <externalId>true</externalId>
        <inlineHelpText>Visible only to Admin profile</inlineHelpText>
        <label>Kit_ExternalID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Manually_Entered_Effective_Date__c</fullName>
        <inlineHelpText>If SW Kit Effective Date should be earlier than the date calculated by the system in Effective Date put Date here.</inlineHelpText>
        <label>Manually Entered Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SWKIT_Description__c</fullName>
        <inlineHelpText>Currently Description is being pulled from MOTOPDM. The data is being pulled every 5 minutes.</inlineHelpText>
        <label>SW Kit Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SW_Kit_Item_State__c</fullName>
        <inlineHelpText>Currently State is being pulled from MOTOPDM. The data is being pulled every 5 minutes.</inlineHelpText>
        <label>SW Kit Item State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Calculated_Effective_Date__c</fullName>
        <inlineHelpText>Calculated by SFDC by taking earliest SA Date of all related Devices.</inlineHelpText>
        <label>System Calculated Effective Date</label>
        <type>Date</type>
    </fields>
    <label>SW Kit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SW_Kit_Item_State__c</columns>
        <columns>SWKIT_Description__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SW Kit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SW Kits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>